--- a/lecture/lecture.ipynb
+++ b/lecture/lecture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -40,12 +40,12 @@
        "\n",
        "\n",
        "div.cell { /* set cell width to about 80 chars */\n",
-       "    width: 1000px;\n",
+       "    width: 800px;\n",
        "}\n",
        "\n",
        "div #notebook { /* centre the content */\n",
        "    background: #fff; /* white background for content */\n",
-       "    width: 1200px;\n",
+       "    width: 1000px;\n",
        "    margin: auto;\n",
        "    padding-left: 1em;\n",
        "}\n",
@@ -71,7 +71,7 @@
        "    font-family: 'Arvo' sans-serif;\n",
        "    line-height: 130%;\n",
        "    font-size: 150%;\n",
-       "    width:900px;\n",
+       "    width:700px;\n",
        "    margin-left:auto;\n",
        "    margin-right:auto;\n",
        "}\n",
@@ -142,14 +142,14 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.core.display import HTML\n",
-    "css_file = '../../../../msc/custom.css' \n",
+    "css_file = 'material/msc/custom.css' \n",
     "HTML(open(css_file, 'r').read()) "
    ]
   },
@@ -227,7 +227,7 @@
     "TUT & = E\\left[Y_1 - Y_0 \\mid D = 0\\right]\n",
     "\\end{align}\n",
     "\n",
-    "<img src=\"images/treatment_effects.png\">\n",
+    "<img src=\"material/images/treatment_effects.png\">\n",
     "\n",
     "**Marginal Treatment Effect**\n",
     "\n",
@@ -239,7 +239,7 @@
     "S^{MTE}(x,z,u_S) & = E[S|X = x,Z = z, U_S = u_S]\n",
     "\\end{align}\n",
     "\n",
-    "<img src=\"images/marginal_relationships.png\">\n",
+    "<img src=\"material/images/marginal_relationships.png\">\n",
     "\n",
     "**Distribution of Potential Outcomes**\n",
     "\n",
@@ -251,7 +251,7 @@
     " * Heterogeneity\n",
     " * Population Shares\n",
     "\n",
-    "<img src=\"images/joint_dist.png\">"
+    "<img src=\"material/images/joint_dist.png\">"
    ]
   },
   {
