--- a/lecture/lecture.ipynb
+++ b/lecture/lecture.ipynb
@@ -157,7 +157,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Generalized Roy Model\n",
+    "# Model\n",
+    "\n",
     "The generalized Roy model is characterized by the following set of equations. \n",
     "\n",
     "**Potential Outcomes**\n",
