--- a/lecture/lecture.ipynb
+++ b/lecture/lecture.ipynb
@@ -149,6 +149,7 @@
     {
      "data": {
       "text/html": [
+       "\n",
        "<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>\n",
        "<link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic' rel='stylesheet' type='text/css'>\n",
        "<link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>\n",
@@ -169,12 +170,12 @@
        "\n",
        "\n",
        "div.cell { /* set cell width to about 80 chars */\n",
-       "    width: 800px;\n",
+       "    width: 1000px;\n",
        "}\n",
        "\n",
        "div #notebook { /* centre the content */\n",
        "    background: #fff; /* white background for content */\n",
-       "    width: 1000px;\n",
+       "    width: 1200px;\n",
        "    margin: auto;\n",
        "    padding-left: 1em;\n",
        "}\n",
@@ -200,7 +201,7 @@
        "    font-family: 'Arvo' sans-serif;\n",
        "    line-height: 130%;\n",
        "    font-size: 150%;\n",
-       "    width:700px;\n",
+       "    width:900px;\n",
        "    margin-left:auto;\n",
        "    margin-right:auto;\n",
        "}\n",
@@ -277,8 +278,8 @@
     }
    ],
    "source": [
-    "from IPython.core.display import HTML\n",
-    "HTML(open('material/msc/custom.css', 'r').read()) "
+    "import urllib; from IPython.core.display import HTML\n",
+    "HTML(urllib.urlopen('http://bit.ly/1OKmNHN').read())"
    ]
   }
  ],
